# text2atlas

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md  SIO_glossary_processing.md
src/: allmesh_dataset.py  create_all_mesh_dataset.py  create_dataset.py  create_organ_dicts.py  create_voxel_dict.py  dataset_build_matching.py  delete_low_variance_images.py  divide_image_dataset_train_test.py  dump_image_embeddings.py  extract_fig_and_capt.py  extract_images.py  extract_pdf_trees.py  extract_video_frames.py  finetune_image_mapping.py  finetune_mapping.py  finetune_matching.py  finetune_sent_mapping_class.py  finetune_sent_mapping_reg.py  finetune_sentence_mapping.py  fix_keyword_detection.py  inference_image_mapping.py  inference_mapping.py  inference_mapping_class.py  inference_mapping_reg.py  inference_matching.py  inference_retrieval.py  inference_sent_mapping_class.py  inference_sent_mapping_reg.py  inference_sentence_mapping.py  loss_testbench.py  merging_dataset_groups.py  merging_organ_groups.py  naive_baseline_mapping.py  naive_baselines.py  pretrain_image_mapping.py  pretrain_mapping.py  pretrain_matching.py  pretrain_sent_mapping_class.py  pretrain_sent_mapping_reg.py  pretrain_sentence_mapping.py  (+8 more)
src/data_processing/: datasets.py  image_caption_pairs.py  image_extraction.py  image_filtering.py  image_text_extraction.py  pdf_get_abstract.py  pdf_get_title.py  pdf_mining.py  pdf_tree_extraction.py  text_extraction.py  text_filtering.py
src/data_processing_mapping/: elastic_transform.py
src/data_processing_matching/: image_caption_pairs.py  image_extraction.py  image_filtering.py  pdf_get_abstract.py  pdf_mining.py  pdf_text_extraction.py  pdf_tree_extraction.py  text_filtering.py
src/image-text-matching/: models.py
src/image_text_matching/: datasets.py  evaluator.py  losses.py  models.py
src/utils/: constants.py  general.py  loadsave.py  metrics.py  text.py
(+9 files in other folders)
