[tool.poetry]
name = "macchina"
version = "0.1.0"
description = ""
authors = ["Gorjan Radevski <gorjanradevski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.5.1"
transformers = "^2.11.0"
matplotlib = "^3.2.2"
scikit-learn = "^0.23.1"
tqdm = "^4.46.1"
tifffile = "^2020.6.3"
natsort = "^7.0.1"
nltk = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
