[tool.poetry]
name = "text2atlas"
version = "0.1.0"
description = ""
authors = ["Gorjan Radevski <gorjanradevski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.5.1"
transformers = "^2.11.0"
matplotlib = "^3.2.2"
scikit-learn = "^0.23.1"
tqdm = "^4.46.1"
tifffile = "^2020.6.3"
natsort = "^7.0.1"
nltk = "^3.5"
jupyter = "^1.0.0"
ipympl = "^0.5.6"
ndjson = "^0.3.1"
spacy = "^2.3.2"
scikit-image = "^0.17.2"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
